Wed Nov 25 13:56:02 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb, port.rb: Ruby-BUG#2390 対応

Fri Nov 20 15:31:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: [REQ#166]対応.

Thu Nov 19 23:12:19 2009  Keiju Ishitsuka  <keiju@giant>

	* master.rb, controller.rb, conf.rb:
	 [REQ#166]. assgin_input_processor_n を追加.

Wed Nov 18 18:19:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, bjob.rb, exceptions.rb, exceptions.rb, njob.rb:
	  [BUG#163]対応. 例外AbortCreateNodeの追加

Wed Nov 18 14:54:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bjob.rb, controller.rb: [BUG#163]対応(まだ不完全)
	* port.rb: [BUG#165]対応. SizedPoolQueue#push_bufのバグ

Fri Nov 13 19:13:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-group-by.rb, n-group-by.rb: [REQ#164]対応
	* controller.rb: デバッグメッセージ追加

Mon Nov  9 18:47:22 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, fairy.conf, conf.rb: MASTER_MAX_ACTIVE_PROCESSORプロパティ追加
	* master.rb, node.rb, controller.rb, processor.rb: [REQ#162]対応

Thu Nov  5 18:05:21 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb, node.rb, processor.rb, ntask.rb: [REQ#161]対応

Thu Oct 29 21:55:06 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* node.rb: デバッグ文挿入
	* bjob.rb, b-cat.rb: メドッド名修正
	* controller.rb, processor.rb, bjob.rb, b-input-iota.rb, ntask.rb:
	  [BUG#157]対応

Wed Oct 28 18:48:33 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-junction.rb: subが動作していなかった([BUG#160]). [REQ#102]対応洩れ
	* b-direct-product.rb, bjob.rb, local-file-input.rb,
	  n-input-varray.rb, nfile.rb, file-place.rb: 余分なコメントを削除

Wed Oct 28 16:34:07 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-find.rb: 無駄なpushがあった

Tue Oct 27 20:20:00 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ntask.rb: 新規, [REQ#156]対応
	* controller.rb, b-cat.rb, b-join.rb, b-zipper.rb, bhere.rb, bjob.rb:
	  [REQ#156]対応
	* processor.rb, n-file-output.rb,  n-output-varray.rb,
	  njob.rb, : [REQ#156]対応
	* n-find.rb: [REQ#102]対応洩れ
