@@ -88,6 +88,8 @@ module Fairy
     def_prop :POOLQUEUE_POOL_THRESHOLD
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
+    def_prop :SORTEDQUEUE_THRESHOLD
+    def_prop :SORTEDQUEUE_SORTBY
 
     def_prop :LOCAL_INPUT_FILE_BUFFER_SIZE
     def_prop :HERE_POOL_THRESHOLD
@@ -224,6 +226,8 @@ module Fairy
   CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+  CONF.SORTEDQUEUE_THRESHOLD = 10000/2
+  CONF.SORTEDQUEUE_SORTBY = proc{|v| v}
 
   CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
   CONF.HERE_POOL_THRESHOLD = 32000
