@@ -58,6 +58,11 @@ module Fairy
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 #CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
+##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
+CONF.SORTEDQUEUE_THRESHOLD = 100000/2
+#CONF.SORTEDQUEUE_THRESHOLD = 10
+##CONF.SORTEDQUEUE_SORTBY = proc{|v| v}
+
 
 ##CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
 ##CONF.HERE_POOL_THRESHOLD = 32000
@@ -99,7 +104,7 @@ CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.LOG_FILE = "/tmp/fairy/log"
 ##CONF.LOG_FLUSH_INTERVAL = 1
 ##CONF.LOG_LEVEL = :DEBUG
-CONF.LOG_LEVEL = :INFO
+#CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
 #CONF.LOG_IMPORT_NTIMES_POP = 1
 
@@ -117,7 +122,7 @@ CONF.LOG_LEVEL = :INFO
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
