@@ -1,3 +1,7 @@
+Wed Nov 25 22:39:17 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb, conf.rb: [REQ#168]対応. SortedQueue
+
 Wed Nov 25 13:56:02 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-mod-group-by.rb, port.rb: Ruby-BUG#2390 対応
